--- a/ReadAssign1213/src/makefile
+++ b/ReadAssign1213/src/makefile
@@ -1,6 +1,16 @@
-CC=gcc
-CFLAGS=-O3 -Wall -Wextra
-CLINKER=-lpapi
+CC = gcc
+CFLAGS = -O3 -Wall -Wextra
+LIBS = -lpapi
+OBJS= matrixDotProduct.o papi.o
 
-matrixDotProduct.o: matrixDotProduct.c matrixDotProduct.h
-	$(CC) -o matrixDotProduct.c
+papi_test:$(OBJS)
+	$(CC) $(CFLAGS) -o papi_test $(OBJS) $(LIBS)
+
+papi.o:papi.c papi_errors.h matrixDotProduct.h
+	$(CC) $(CFLAGS) -c papi.c
+
+matrixDotProduct.o:matrixDotProduct.c matrixDotProduct.h
+	$(CC) $(CFLAGS) -c matrixDotProduct.c 
+
+clean:
+	rm *.o
