--- a/PI/FVLib/FV-config.conf
+++ b/PI/FVLib/FV-config.conf
@@ -2,5 +2,5 @@
 PREFIX=/Users/rmb/Desktop/FVLib
 # Parameters compiler
 CCC=g++
-CFLAGS= -O3 -fopenmp -g -I /Users/rmb/Desktop/FVLib/include
+CFLAGS=-g -O3 -fopenmp -I /Users/rmb/Desktop/FVLib/include
 LIBS= -L/Users/rmb/Desktop/FVLib/lib -lFVLib
