SA - DONE + MPI - DONE

--- a/AMN/room_assignment/src/makefile
+++ b/AMN/room_assignment/src/makefile
@@ -1,12 +1,20 @@
 CC=gcc
+MPICC=mpicc
 CFLAGS=	-Wall -Wextra -std=c99 -pedantic
 LDFLAGS= -lm
 OBJS=seq.o generators.o distribute.o helpers.o
+MPIOBJS=mpi.o generators.o distribute.o helpers.o
+
+.PHONY: clean
 
 all: $(OBJS)
 	$(CC) $(CFLAGS) $^ $(LDFLAGS)
 
+mpi: $(MPIOBJS)
+	$(MPICC) $(CFLAGS) $^ $(LDFLAGS)
 
+mpi.o: mpi.c distribute.h helpers.h
+	$(MPICC) $(CFLAGS) -c mpi.c
 
 seq.o: seq.c distribute.h
 	$(CC) $(CFLAGS) -c seq.c 
@@ -21,6 +29,8 @@ distribute.o: distribute.c generators.h
 
 helpers.o: helpers.c helpers.h
 	$(CC) $(CFLAGS) -c helpers.c
+
+
 
 
 clean:
